# metis

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml
.claude/: CLAUDE.md
.github/workflows/: build-backend.yml  build-frontend.yml  ci.yml  codeql.yml  deploy-backend.yml  deploy-frontend.yml  security.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_12_2334_init.py  2025_12_14_1506_add_celery_task_id_to_reviews.py  2025_12_14_1858_fix_change_github_installation_id_.py  2026_02_08_0103_add_review_comment_title_and_make_.py  2026_02_08_1805_add_agent_runs_table.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  loop.py
backend/app/agents/implementation/: __init__.py  background_agent.py  review_agent.py  summary_agent.py
backend/app/agents/prompts/: __init__.py  coder_prompt.py  reviewer_prompt.py  summary_prompt.py
backend/app/agents/sandbox/: __init__.py  client.py  manager.py
backend/app/agents/tools/: __init__.py  base.py  completion_tools.py  file_tools.py  git_tools.py  manager.py  process_tools.py  review_posting_tools.py
backend/app/api/: agents.py  analytics.py  auth.py  installations.py  issues.py  review_comments.py  test.py  webhooks.py
backend/app/core/: auth_deps.py  celery_app.py  client.py  config.py  redis_client.py  security.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/models/: __init__.py  agent_run.py  installation.py  review.py  user.py
backend/app/repositories/: installation.py  review.py  user.py
backend/app/schemas/: agent_run.py  analytics.py  installation.py  issue.py  metis_config.py  review_comment.py
backend/app/services/: github.py  metis_agent.py  oauth.py  pr_summary.py  webhook.py
backend/app/tasks/: __init__.py  agent_review_task.py  background_agent_task.py  review_task.py  summary_task.py
backend/app/utils/: agent_logger.py  prompts.py
backend/tests/: __init__.py
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: LandingPage.tsx  ProtectedRoute.tsx  UnsavedChangesBar.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx  Sidebar.tsx
frontend/src/components/dashboard/agent-progress/: AgentRunHeader.tsx  AgentRunMetadataPanel.tsx  AgentRunStatsCards.tsx  AgentRunTimeline.tsx  types.ts  utils.tsx
frontend/src/components/dashboard/analytics/: AnalyticsCommentSheet.tsx  AnalyticsIssuesTab.tsx  AnalyticsStatisticsTab.tsx
frontend/src/components/issues/: AgentRunsTable.tsx  AgentStatusBadge.tsx  IssueCommentCard.tsx  IssuesTable.tsx  LabelBadge.tsx  LaunchAgentDialog.tsx
frontend/src/components/landing/: CodeTerminal.tsx  Features.tsx  Footer.tsx  Hero.tsx  Marquee.tsx  Navbar.tsx
frontend/src/components/ui/: PixelBlast.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  chart.tsx  dropdown-menu.tsx  input.tsx  label.tsx  pagination.tsx  progress.tsx  select.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/contexts/: AuthContext.tsx  RepositoryContext.tsx  ToastContext.tsx
frontend/src/lib/: api-client.ts  language-icons.tsx
frontend/src/pages/: CallbackPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx
frontend/src/pages/dashboard/: AIReviewPage.tsx  AgentProgressPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  IssueDetailPage.tsx  IssuesPage.tsx  RepositoriesPage.tsx
frontend/src/types/: api.ts
