[project]
name = "backend"
version = "0.1.0"
description = "Metis AI Code Reviewer Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.0",
    "cryptography>=46.0.5",
    "daytona>=0.125.0",
    "filelock>=3.20.3",
    "fastapi>=0.121.3",
    "flower>=2.0.1",
    "google-cloud-aiplatform>=1.136.0",
    "httpx>=0.28.1",
    "langsmith>=0.5.0",
    "litellm>=1.55.0",
    "marshmallow>=4.1.2",
    "openai>=2.8.1",
    "passlib[bcrypt]>=1.7.4",
    "pyasn1>=0.6.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pygithub>=2.8.1",
    "pyjwt[crypto]>=2.10.1",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "tomli>=2.3.0",
    "urllib3>=2.6.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.1",
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "tomli>=2.3.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "S",     # flake8-bandit
    "C",     # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # Perflint
    "RUF",   # Ruff-specific rules
]

ignore = [
    "S101",    # Use of assert (needed for tests)
    "S104",    # Binding to 0.0.0.0 (needed for Docker/development)
    "S105",    # False positives for "hardcoded password" on non-secret string constants
    "ERA001",  # Commented-out code (common in templates / alembic env)
    "ARG001",  # Unused function args (common with callback/signal signatures)
    "ARG002",  # Unused method args (common with framework hook signatures)
    "B008",    # FastAPI pattern: Depends()/Query() in defaults
    "B024",    # ABC without abstract methods (used as a semantic base class)
    "E501",    # Formatter is source of truth; long strings/prompts are common
    "ISC001",  # String literal concatenation style; not worth blocking CI
    "PLR0913", # Too many arguments
    "PLR0911", # Too many return statements (often OK in endpoint/task flows)
    "PLR0912", # Too many branches (often OK in endpoint/task flows)
    "PLR0915", # Too many statements (often OK in endpoint/task flows)
    "C901",    # Function is too complex (tracked separately; avoid blocking CI)
    "PLC0415", # Import location (sometimes needed to avoid circular imports)
    "RUF012",  # Mutable class attrs annotation (not worth blocking CI)
    "RET504",  # Assignment before return; stylistic
    "TRY300",  # Style preference; avoid blocking CI
    "TRY003",  # Long exception messages
    "TRY400",  # Prefer logging.exception; style preference
    "EM101",   # Exception message in string literal
    "EM102",   # Exception message in f-string
    "PERF401", # Perf micro-optimization; avoid blocking CI
    "SIM102",  # Style preference; avoid blocking CI
    "B904",    # raise-from style in except blocks
    "C416",    # dict() vs dict comprehension
    "DTZ003",  # utcnow() discouraged
    "DTZ005",  # datetime.now() without tz
    "E402",    # import not at top of file (used for task registration patterns)
    "F401",    # imported but unused (used for side-effect imports)
    "F841",    # local variable assigned but never used
    "RUF100",  # unused noqa
    "TC001",   # move application imports into TYPE_CHECKING blocks
    "TC002",   # move third-party imports into TYPE_CHECKING blocks
    "TC003",   # move standard library imports into TYPE_CHECKING blocks
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"migrations/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip_glob = ["*/migrations/*", "*/alembic/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601", "B104"]  # B104: binding to 0.0.0.0

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]
match-dir = "^(?!tests|migrations|alembic).*"
